--- a/meas.tex
+++ b/meas.tex
@@ -4,7 +4,7 @@ The CC-Inclusive cross-section selection I filter used in this analysis will be 
 MicroBooNE requires fully automated event reconstruction and selection algorithms for use in the many physics measurements being worked on to date due to the large data rate MicroBooNE receives. Being able to automatically pluck out the neutrino interaction among a sea of cosmics proved to be challenging but was accomplished. MicroBooNE has developed two complementary and preliminary selection algorithms to select charged-current $\nu_{\mu}-Ar$ interactions. Both are fully automated and cut based. The results of this thesis will focus on selection I and will focus on further improving these algorithms using Convolutional Neural Network (CNN) implementations. These selections identify the muon from a neutrino interaction without biasing towards track multiplicity. To combat cosmic and neutral current background, the analysis is strongly biased towards forward-going long tracks which are contained. This limits phase space and reduces acceptance. 
 
 \section{Data and MC Processing Chain}
-The data used for this analysis were based on hardware and software triggers. Events used came from the \textit{BNB\_INCLUSIVE} and \textit{EXT\_BNB\_INCLUSIVE} streams and were used for signal and background. The \textit{BNB\_INCLUSIVE} stream is chosen by requiring that the hardware trigger bit is fired and that the event passed an optical software trigger within a BNB spill timing window. The \textit{EXT\_BNB\_INCLUSIVE} stream requires the EXT hardware trigger to fire as well as pass the same optical software trigger within a BNB spill size timing window similar to the \textit{BNB\_INCLUSIVE}. 
+The data used for this analysis were based on hardware and software triggers. Events used came from the \textit{BNB\_INCLUSIVE} stream, which consists of neutrinos and cosmic background inside the beamgate, and \textit{EXT\_BNB\_INCLUSIVE} stream, which include just cosmics and background in the beamgate These two streams were used for signal and background respectively. The \textit{BNB\_INCLUSIVE} stream is chosen by requiring that the hardware trigger bit is fired and that the event passed an optical software trigger within a BNB spill timing window. The \textit{EXT\_BNB\_INCLUSIVE} stream requires the EXT hardware trigger to fire as well as pass the same optical software trigger within a BNB spill size timing window similar to the \textit{BNB\_INCLUSIVE}. 
 
 The two MC samples used in this analysis and for determining selection efficiencies and purities were GENIE BNB neutrino interactions with CORSIKA cosmic ray overlay within the readout window and inTime CORSIKA cosmic rays. The MC samples generated used \textit{\textbf{uboonecode v04\_36\_00}} and are based on the following packages:
 \begin{itemize}
@@ -37,7 +37,7 @@ On top of the hardware and software triggers, the data also had to pass more cri
 \end{itemize}
 
 \section{Normalization of data and MC}\label{section:normalize}
-The off-beam sample is used to measure beam-unrelated backgrounds. For normalization, one needs the total number of BNB spills \textit{$(N_{BNB})$} and the total number of external triggers. Next, the BNB spills used need to pass the beam quality cuts. The normalization factor is then \textit{$N_{BNB}/N_{EXT}$} which is 1.23. 
+Backgrounds unrelated to the beam are measured by using the off-beam sample. To normalize this sample, we take the ratio of the total number of BNB spills \textit{$(N_{BNB})$} that pass the beam quality cuts and the total number of external triggers. The normalization factor is then \textit{$N_{BNB}/N_{EXT}$} which is 1.23. 
 
 To normalize generated BNB MC events to POT, we used the following:
 \begin{itemize}
@@ -49,7 +49,7 @@ where this scaling factor only applies to mcc7 generated events. The inTime cosm
 \subsection{Software Trigger}
 Most of the BNB spills from the accelerator do not have a neutrino interaction in MicroBooNE. To save computation resources and reduce data-rates, we require a burst of light in the light collection system in coincidence with the 1.6 $\micro s $ beam spill. Requiring light activity in coincidence with the beam spill eliminates the vast majority of triggers with no neutrino interaction in the detector, however, it doesn't guarantee the activity in the detector is a neutrino interaction since a cosmic ray can interact in coincidence with the beam spill as well.
 
-To implement this, a software trigger was used on the PMT waveforms to decide whether or not to keep that event. The software trigger is implemented after the event builder combines data from the PMTs and triggers into a single event. The software trigger uses the digitized output of the 32 PMT channels in the light collection system. Only the waveform region in coincidence with the beam spill is used to search for possible triggers. For each PMT, a waveform is found by taking the difference of ADC values is calculated between \textit{t} and \textit{t + s}. This waveform is then scanned for ADC values above a threshold \textit{$X_0$}. Once an ADC is above this threshold, a discriminator window is opened for a fixed number of time ticks \textit{($W_0$)}. If the ADC count within this window \textit{$W_0$} is greater than a second larger threshold \textit{$X_3$}, a final window of width \textit{$W_3$} is opened. The max ADC value within this final window is set as the peak amplitude for the PMT and then summed across all 32 PMTs and set to the variable PHMAX. The software trigger places a final cut on the PHMAX variable to decide whether or not to keep the event. The thresholds were found by the Trigger task force using MC studies and are as follows: 
+To implement this, a software trigger was used on the PMT waveforms to decide whether or not to keep that event. The software trigger implemented after the event builder combines data from the PMTs and triggers into a single event. The software trigger uses the digitized output of the 32 PMT channels in the light collection system. Only the waveform region in coincidence with the beam spill is used to search for possible triggers. For each PMT, a waveform is found by taking the difference of ADC values is calculated between \textit{t} and \textit{t + s}. This waveform is then scanned for ADC values above a threshold \textit{$X_0$}. Once an ADC is above this threshold, a discriminator window is opened for a fixed number of time ticks \textit{($W_0$)}. If the ADC count within this window \textit{$W_0$} is greater than a second larger threshold \textit{$X_3$}, a final window of width \textit{$W_3$} is opened. The max ADC value within this final window is set as the peak amplitude for the PMT and then summed across all 32 PMTs and set to the variable PHMAX. The software trigger places a final cut on the PHMAX variable to decide whether or not to keep the event. The thresholds were found by the Trigger task force using MC studies and are as follows: 
 \begin{itemize}
 \item{$X_0$ = 5 ADC} 
 \item{$X_3$ = 10 ADC} 
@@ -110,7 +110,7 @@ There are multiple clustering algorithms used in this analysis. The main purpose
 
 The pandora algorithm utilizes it's own clustering algorithm and will be detailed in the next section. The last clustering algorithm is called linecluster. The linecluster algorithm reconstructs 2D linear clusters per plane by fitting a line onto nearby hits which is then extrapolated to neighboring wires. 2D vertices are found per plane by using the intersection points of the ends of nearby clusters. These 2D vertices are then matched in time across all three planes to get a 3D vertex in space.  
 \subsection{Pandora}
-
+The pandora algorithm takes hits as its input. The pandora hits are placed on the X-Z plane, where X represents the drift time and Z represents the wire number. MicroBooNE has three planes of wires oriented at $\pm$ 60$^\circ$ and 0$^\circ$ to the vertical. The X coordinate is common for all three planes and is used by the pattern-recognition algorithms implemented in Pandora to create the output Pandora objects. A Pandora particle hierarchy is also created which associates clusters, space points, 3D track and vertex objects, as well as shower objects to the input 2D hit. Two Pandora algorithms are implemented, PandoraCosmic and PandoraNu. PandoraCosmic is optimized to reconstruct cosmic rays and their daughter delta rays to later tag as cosmic, while PandoraNu is optimized to reconstruct neutrino interactions, including vertex and all vertex emerging daugther particles.     
 \subsection{Trackkalmanhit}
 The trackkalmanhit algorithm takes 2D clusters returned from the fuzzy cluster algorithm and outputs track objects. There is no hierarchy structure as there is in pandora, each track is independent. There also is no vertex reconstruction with this algorithm as well.
 \subsection{Cosmic Hit Removal}
@@ -122,13 +122,15 @@ After the first pass, the output of PFParticle hierarchy is then passed to a cos
 \subsection{Projection Matching Algorithm}
 The projection matching algorithm (PMA) was inherited from ICARUS and has been implemented in LArSoft. PMA differs from traditional LArSoft 3D reconstruction algorithms. Most 3D reconstruction attempts to match 2D objects from all three planes by drift time, while the PMA algorithm projects a track hypothesis on each plane then the distance between this projection and the hits on each plane is minimized simultaneously.
 \section{Event Selection}\label{section:eventselection}
+The work done in this thesis was to further improve Selection I by increasing both efficiency and purity as well as increasing acceptance without further affecting the kinematic distributions of the selected neutrino events. Although the focus of this thesis was only on Selection I, Selection II will be detailed below as well.
+
 The first requirement for selecting $\nu_{\mu}$ CC events is that the event has at least one scintillation light flash in the beam trigger window with more than 50 PE on all PMTs combined. From the flashes that pass, the most intense is chosen and considered to be originating from a neutrino interaction and will be the only flash used in further cuts. 
 
 Vertices are then required to have at least one reconstructed track start or endpoint within a 5 cm radius. Showers associated with a vertex do not pass this cut. All tracks associated with a vertex are then used to calculate a track length weighted average of the $\theta$-angle. Of all the vertices that do pass, only the vertex with the most forward going $\theta$-angle average of all associated tracks is considered the neutrino vertex candidate. The most forward going $\theta$-angle average is chosen by picking the largest track range weighted average of $|cos(\theta)|$, seeing as $cos(\theta)=1$ is the beam direction. Next, it is required that the reconstructed neutrino vertex candidate be within the fiducial volume as well as within the drift time starting at $t_0$. The fiducial volume boundaries chosen are 10 cm from the edges of the TPC in x and z which is the drift direction and beam direction respectively, and 20 cm from the edges of the TPC in y which is the vertical direction. For all further cuts, only the longest track associated with the neutrino vertex candidate and this track is assumed to be the muon candidate of the neutrino event.
 
 The next cut requires the position of the flash in the z-direction and the track z-projection to be compared. This basic flash matching algorithm is rudimentary and a placeholder for a more sophisticated algorithm. The z-position of the flash needs to be within 80 cm to the z-positions of track start or endpoints. If the flash is between the track start and endpoint, the distance of the flash to the track is considered to be 0 cm. 
 
-Lastly, the track needs to be fully contained within the fiducial volume and have a track range greater than 75 cm. The range is the 3D distance between the track's start and endpoint. The length cut was optimized to remove NC background that contain a pion due to the pion interaction rate to be \sim 70 cm. A track that makes all the cuts is considered to be the muon of a $\nu_{\mu}$ CC event. The list of cuts for this selection is described below:
+Lastly, the track needs to be fully contained within the fiducial volume and have a track range greater than 75 cm. The range is the 3D distance between the track's start and endpoint. The length cut was optimized to remove NC background that contain a pion due to the pion interaction rate to be \sim 70 cm. A track that makes all the cuts is considered to be the muon of a $\nu_{\mu}$ CC event. The list of cuts for Selection I is described below:
 \begin{enumerate}
 \item At least one flash > 50 PE within the beam gate.
 \item At least one track within 5 cm around a vertex.
@@ -140,7 +142,9 @@ Lastly, the track needs to be fully contained within the fiducial volume and hav
 \item Longest track is greater than 75 cm in length.
 \end{enumerate}
 
-The event selection scheme can also be seen in figure \ref{fig:selection}. Table \ref{table:mc} lists the passing rates for MC events for the selection scheme described above. Table \ref{table:data} lists the passing rates for on-beam and off-beam data for the selection scheme. The normalization factors applied between on-beam and off-beam data are described in section \ref{section:normalize}.
+The event selection scheme for both Selection I and Selection II can be seen in figure \ref{fig:selection}. Both selections require a flash greater than or equal to 50 PE inside the beam window. Selection II then requires a track candidate to be matched to a flash at most 70 cm away in Z at the beginning compared to an 80 cm flash match towards the end of the Selection I cut list. The next cut Selection II takes is requiring the reconstructed vertex within the fiducial volume. Selection II then requires tracks within 3 cm from a vertex, which is a tighter cut than Selection I's 5 cm. Selection II then has separate cut chains for track multiplicities of 1, 2 and greater than 2 which allows for variability in track containment, and can be seen in figure \ref{fig:selection}.   
+
+Table \ref{table:mc} lists the passing rates for MC events for Selection I. Table \ref{table:data} lists the passing rates for on-beam and off-beam data for Selection I. The normalization factors applied between on-beam and off-beam data are described in section \ref{section:normalize}.
 \begin{figure}[htp!]
 \includegraphics[width=0.9\textwidth]{figs/selection.png}
 \caption{Event selection diagram for selection I and selection II. This analysis focused on optimizing selection I. Boxes with the same color across the two selections symbolize similar cuts.}
@@ -185,7 +189,7 @@ track $\geq$ 75 cm & 3213 (30\%/0.6\%) & 1328 (25\%/0.3\%) \\
 \subsection{Expected Backgrounds}
 Most of the selected background events will be of cosmic origin. There are two types of cosmic background, one triggered by a cosmic-ray event occurring in the beam gate time window, the other triggered by a beam induced interaction in the cryostat followed by a misidentification of a cosmic event as a neutrino event. The first cosmic background can be subtracted from the selected events using the off-beam BNBEXT sample normalized to the on-beam. The second cosmic background events are modeled by MC by using BNB+Cosmic MC sample. 
 
-Other backgrounds originate from neutrino beam contaminates. A major contribution in this sector is by neutral current neutrino events, for example a charged pion track misidentified as a muon. Another contribution are $\nu_e$-like and anti-muon-neutrino events. These beam related backgrounds are an order of magnitude smaller than the cosmic misidentification backgrounds. These backgrounds can not be eliminated and are estimated using MC truth.
+Other backgrounds originate from neutrino beam contaminants. A major contribution in this sector is by neutral current neutrino events, for example a charged pion track misidentified as a muon. Another contribution are $\nu_e$-like and anti-muon-neutrino events. These beam related backgrounds are an order of magnitude smaller than the cosmic misidentification backgrounds. These backgrounds can not be eliminated and are estimated using MC truth.
 
 The efficiency and purity of Selection I are calculated below:
 \begin{itemize}
@@ -199,7 +203,7 @@ The efficiency and purity of Selection I are calculated below:
 	\end{itemize}
 \end{itemize}
 \subsection{Truth Distributions}
-The truth distributions of MC truth variables before and after the selection are detailed in this section. The overall efficiencies are calculated for all $\nu_{\mu}$ CC signal events with a true interaction within the fiducial volume and a fully contained muon track originating from said vertex. Figures \ref{fig:p} through \ref{fig:angle} detail the truth distributions for muon momentum, $cos(\theta)$ and $\phi$ and figures \ref{fig:stacked} through \ref{fig:stacked2} detail the total efficiency of the selection for charged current quasi elastic (CCQE) events, charged current resonant (CCRES) events, and charged current deep inelastic (CCDIS) events. 
+The truth distributions of MC truth variables before and after the selection are detailed in this section. Because Selection I requires containment of the muon candidate track, the overall efficiencies are calculated for all $\nu_{\mu}$ CC signal events with a true interaction within the fiducial volume and a fully contained muon track originating from said vertex. Figures \ref{fig:p} through \ref{fig:angle} detail the truth distributions for muon momentum, $cos(\theta)$ and $\phi$ and figures \ref{fig:stacked} through \ref{fig:stacked2} detail the total efficiency of the selection for charged current quasi elastic (CCQE) events, charged current resonant (CCRES) events, and charged current deep inelastic (CCDIS) events. The differences in the kinematic distributions before and after the selection, which is especially visible in $cos(\theta)$ and $\phi$ aren't yet understood and for the purpose of this thesis will be a feature of the selection. 
 
 \begin{figure}[htp!]
 \includegraphics[width=\textwidth]{figs/truth_mumomentum.png}
